# hash-table_C-library

./: .gitignore  .~lock.формализация.odt#  CMakeLists.txt  Makefile  a.out  compile.sh  main.c  makefile  move_blobs_to_test.sh  script.sh  test.c  протокол хранения ключей и значений в файле.odt  формализация.odt
CMakeLists/: CMakeLists for dinamic library.txt  CMakeLists for static linking.txt
dict_chain_library/: a.out  dict_chain.c  dict_chain.h
dict_couple_library/: dict_couple.c
doc/: инструкция к компиляции.odt
hash/: hash.c  hash.h
hash_table_manager/: hash_table_manager.c  hash_table_manager.h
include/: config.h  dict_chain.h  dict_couple.h  hash.h  hash_table_manager.h
src/: dict_chain.c  dict_couple.c  hash.c  hash_table_manager.c  main.c
testing for saving string in files/: read.c  write.c
